<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="7"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                android:layout_weight="2"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/et_title_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:hint="@string/title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reminder_category" />

                        <RadioGroup
                            android:id="@+id/rg_category_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            android:checkedButton="@+id/rb_category_general_id">

                            <RadioButton
                                android:id="@+id/rb_category_general_id"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:text="@string/general_reminder" />

                            <RadioButton
                                android:id="@+id/rb_category_payment_id"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="@string/payment_reminder" />

                        </RadioGroup>

                    </LinearLayout>


                    <EditText
                        android:id="@+id/et_remider_info_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:hint="@string/notes" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                android:layout_weight="2"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/reminder_time" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/bt_due_date_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:onClick="showDatePickerDialog"
                            android:text="@string/due_date"
                            android:textColor="@color/dull_white" />

                        <Button
                            android:id="@+id/bt_time_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:onClick="showTimePickerDialog"
                            android:text="@string/time"
                            android:textColor="@color/dull_white" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/notify_before" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/et_notify_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="5"
                            android:gravity="center"
                            android:inputType="number"/>

                        <Spinner
                            android:id="@+id/sp_notify_interval_type_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:entries="@array/notify_before" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                android:layout_weight="2"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_repeat" />

                        <Spinner
                            android:id="@+id/sp_reminder_type_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/repeat"></Spinner>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_repeat_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/et_repeat_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="1"
                            android:gravity="center"
                            android:inputType="number" />

                        <Spinner
                            android:id="@+id/sp_repeat_interval_type_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:entries="@array/repeat_interval" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <CheckedTextView
                    android:id="@+id/ctv_vibration_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:checked="true"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center_vertical"
                    android:text="@string/sound_with_vibration" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/dull_white"
                android:text="@string/save"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:layout_marginBottom="@dimen/card_view_margin_top_bottom"/>

            <!--<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_repeat" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/repeat"></Spinner>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin_top_bottom"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/repeat" />

                <EditText

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                &lt;!&ndash;<TextView
                    android:id="@+id/tv_repeat_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/select_time"
                    android:clickable="true"
                    android:onClick="showTimePickerDialog"/>&ndash;&gt;

            </LinearLayout>-->

        </LinearLayout>

    </ScrollView>


</LinearLayout>