<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_category_icon_id"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_todo"
                        android:background="@color/gray"/>

                    <Spinner
                        android:id="@+id/sp_category_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:entries="@array/category_list"></Spinner>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_title_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title" />


                    <EditText
                        android:id="@+id/et_remider_info_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notes" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_time" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/bt_due_date_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@color/colorPrimary"
                            android:onClick="showDatePickerDialog"
                            android:text="@string/due_date"
                            android:textColor="@color/dull_white" />

                        <Button
                            android:id="@+id/bt_time_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@color/colorPrimary"
                            android:onClick="showTimePickerDialog"
                            android:text="@string/time"
                            android:textColor="@color/dull_white" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:background="@color/dull_white"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_repeat" />

                        <Spinner
                            android:id="@+id/sp_reminder_type_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/repeat"></Spinner>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_repeat_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/et_repeat_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:text="1" />

                        <Spinner
                            android:id="@+id/sp_repeat_interval_type_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:entries="@array/repeat_interval" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/dull_white"
                android:text="@string/save"
                android:layout_marginEnd="@dimen/card_view_margin_left_right"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginStart="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:layout_marginBottom="@dimen/card_view_margin_top_bottom"
                android:onClick="saveReminder"/>

        </LinearLayout>
    </ScrollView>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_category_icon_id"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_todo"
            android:background="@color/gray"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/category_list"></Spinner>

    </LinearLayout>-->

</LinearLayout>